--- a/caseGame/src/app/components/game-list/game-list.component.html
+++ b/caseGame/src/app/components/game-list/game-list.component.html
@@ -2,16 +2,17 @@
     <div class="contentTitle">Game List</div>
     <div class="contentInputWrapper">
         <div class="contentFilter">
-            <input type="text" placeholder="search" />
+            <input type="text" placeholder="search"   name="search"  aria-describedby="searchText"
+               [(ngModel)]="searchText" autocomplete="off" autofocus/>
         </div>
         <div class="contentBtn" [routerLink]="['game-creation']">new game</div>
     </div>
-    <div *ngFor="let game of games.data" class="contentCard">
-        <img class="cardImg" :src="game.img" alt="img1">
+    <div *ngFor="let game of games.data | appFilter:searchText" class="contentCard">
+        <img class="cardImg" [src]="game.img" [alt]="game.id">
         <div class="cardInfo">
-            <span class="cardInfoText">Game Name: </span>{{game.game}}
-            <span class="cardInfoText">Bundle: </span>{{game.bundle}}
-            <span class="cardInfoText">Owner: </span>{{game.owner}}
+            <div><span class="cardInfoText">Game Name: </span>{{game.game}}</div>
+            <div><span class="cardInfoText">Bundle: </span>{{game.bundle}}</div> 
+            <div><span class="cardInfoText">Owner: </span>{{game.owner}}</div>
         </div>
         <div (click)="removeGame(game)" class="cardBtn">delete</div>
     </div>
